--- a/index.html
+++ b/index.html
@@ -22,35 +22,35 @@
         </div>
         </div>
         </div>
-        <img src="/img/Hero Image Container.svg" alt="">
+        <img class="mare" src="/img/Hero Image Container.svg" alt="">
     </section>
     <section class="sectiontwo">
         <img src="img/side-view-people-holding-books 1.svg" class="border" alt="">
         <div class="table">
-            <h2>Read together, grow together</h2>
+            <h2 class="arrow">Read together, grow together</h2>
             <div class="items">
                 <img src="/bacimg/check.svg" alt="">
-                <p>Monthly curated tech reads selected by industry experts</p>
+                <p class="vert">Monthly curated tech reads selected by industry experts</p>
             </div>
             <div class="items">
                 <img src="/bacimg/check.svg" alt="">
-                <p>Virtual and in-person meetups for deep-dive discussions</p>
+                <p class="vert">Virtual and in-person meetups for deep-dive discussions</p>
             </div>
             <div class="items">
                 <img src="/bacimg/check.svg" alt="">
-                <p>Early access to new tech book releases</p>
+                <p class="vert">Early access to new tech book releases</p>
             </div>
             <div class="items">
                 <img src="/bacimg/check.svg" alt="1">
-                <p>Author Q&A sessions with tech thought leaders</p>
+                <p class="vert">Author Q&A sessions with tech thought leaders</p>
             </div>
         </div>
     </section>
 
     <section class="sectionthree">
         <div class="part">
-            <h2>Not your average book club <img class="mem" src="/bacimg/path158.svg" alt=""></h2>
-            <p>Connect with a community that speaks your language - from <s>Python</s> to <s>TypeScript</s> and everything in between. Our discussions blend technical depth with practical applications.</p>
+            <h2 class="secn">Not your average book club <img class="mem" src="/bacimg/path158.svg" alt=""></h2>
+            <p class="cry">Connect with a community that speaks your language - from <s>Python</s> to <s>TypeScript</s> and everything in between. Our discussions blend technical depth with practical applications.</p>
         </div>
         <img  src="/img/medium-shot-people-book-club.svg" alt="" class="border">
     </section>
@@ -123,9 +123,8 @@
             </div>
             <button class="option-btn-think">SUBSCRIBE NOW</button>
             </div>
-
-
-            <div class="optionsItem">
+ 
+            <div class="optionsItem error">
                 <h4>Enterprise</h4><br>
                 <h3>Custom</h3>
                 <hr>
@@ -143,15 +142,15 @@
         </div>
 
         <div class="lest">
-        <img src="/bacimg/Stars Container.svg" alt="">
-            <h4>"This book club transformed my technical reading from a solitary activity into an enriching community experience. The discussions are gold!"</h4>
-            <p>Sarah Chen, Software Architect</p>
+        <img class="eee" src="/bacimg/Stars Container.svg" alt="">
+            <h4 class="mar">"This book club transformed my technical reading from a solitary activity into an enriching community experience. The discussions are gold!"</h4>
+            <p  class="ttt">Sarah Chen, Software Architect</p>
         </div>
     </section>
 
     <footer class="footer">
-        <h1>Ready to debug your reading list?</h1>
-        <button>REVIEW MEMBERSHIP OPTIONS</button>
+        <h1 class="frfr">Ready to debug your reading list?</h1>
+        <button class="mare">REVIEW MEMBERSHIP OPTIONS</button>
         <div class="car">
             <img class="care" src="/bacimg/Testimonials Container.svg" alt="1">
             
@@ -162,8 +161,8 @@
         </div>
             <div class="hr"></div>
             <div class="footbottm">
-                <div><data>© 2024 - Tech Book Club</data></div>
-                <div><img class="scialmed" src="/bacimg/Social Media Container.svg" alt=""></div>
+               <p class="redi">© 2024 - Tech Book Club</p>
+            <img class="scialmed" src="/bacimg/Social Media Container.svg" alt="">
             </div>
     </footer>
 </body>
